# DB-Migration-Tracking-Alembic

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 307456355dea_split_full_name.py  4550e751363e_add_index_to_mobile_number.py  96b254012b4b_initial_schema.py  98fe1d485507_add_phone_number_to_users.py  e796b6067c33_rename_phone_number_to_mobile_number.py
src/db_migration_tracking_alembic/: database.py  main.py  models.py  schemas.py
